@@ -83,29 +83,29 @@ static char *CG_UPNPAV_DMR_DEVICE_DESCRIPTION =
 "     <modelName>AV Renderer</modelName>\n"
 "     <modelURL>http://www.cybergarage.org</modelURL>\n"
 "     <UDN>uuid:5d4949f7-fe35-445a-9831-949f1433bdca</UDN>\n"
-"     <serviceList>\n"
-"        <service>\n"
-"           <serviceType>urn:schemas-upnp-org:service:AVTransport:1</serviceType>\n"
-"           <serviceId>urn:schemas-upnp-org:service:AVTransport</serviceId>\n"
-"           <SCPDURL>_urn:schemas-upnp-org:service:AVTransport_scpd.xml</SCPDURL>\n"
-"           <controlURL>_urn:schemas-upnp-org:service:AVTransport_control</controlURL>\n"
-"           <eventSubURL>_urn:schemas-upnp-org:service:AVTransport_event</eventSubURL>\n"
-"        </service>\n"
-"        <service>\n"
-"           <serviceType>urn:schemas-upnp-org:service:ConnectionManager:1</serviceType>\n"
-"           <serviceId>urn:schemas-upnp-org:service:ConnectionManager</serviceId>\n"
-"           <SCPDURL>_urn:schemas-upnp-org:service:ConnectionManager_scpd.xml</SCPDURL>\n"
-"           <controlURL>_urn:schemas-upnp-org:service:ConnectionManager_control</controlURL>\n"
-"           <eventSubURL>_urn:schemas-upnp-org:service:ConnectionManager_event</eventSubURL>\n"
-"        </service>\n"
-"        <service>\n"
+"    <serviceList>\n"
+"       <service>\n"
 "           <serviceType>urn:schemas-upnp-org:service:RenderingControl:1</serviceType>\n"
 "           <serviceId>urn:schemas-upnp-org:service:RenderingControl</serviceId>\n"
-"           <SCPDURL>_urn:schemas-upnp-org:service:RenderingControl_scpd.xml</SCPDURL>\n"
-"           <controlURL>_urn:schemas-upnp-org:service:RenderingControl_control</controlURL>\n"
-"           <eventSubURL>_urn:schemas-upnp-org:service:RenderingControl_event</eventSubURL>\n"
-"        </service>\n"
-"     </serviceList>\n"
+"          <SCPDURL>/service/RenderingControl1.xml</SCPDURL>\n"
+"          <controlURL>/service/RenderingControl_control</controlURL>\n"
+"          <eventSubURL>/service/RenderingControl_event</eventSubURL>\n"
+"       </service>\n"
+"       <service>\n"
+"           <serviceType>urn:schemas-upnp-org:service:ConnectionManager:1</serviceType>\n"
+"           <serviceId>urn:schemas-upnp-org:service:ConnectionManager</serviceId>\n"
+"          <SCPDURL>/service/ConnectionManager1.xml</SCPDURL>\n"
+"          <controlURL>/service/ConnectionManager_control</controlURL>\n"
+"          <eventSubURL>/service/ConnectionManager_event</eventSubURL>\n"
+"       </service>\n"
+"       <service>\n"
+"           <serviceType>urn:schemas-upnp-org:service:AVTransport:1</serviceType>\n"
+"           <serviceId>urn:schemas-upnp-org:service:AVTransport</serviceId>\n"
+"          <SCPDURL>/service/AVTransport1.xml</SCPDURL>\n"
+"          <controlURL>/service/AVTransport_control</controlURL>\n"
+"          <eventSubURL>/service/AVTransport_event</eventSubURL>\n"
+"       </service>\n"
+"    </serviceList>\n"
 "  </device>\n"
 "</root>\n";
 #endif
